# orbital-solver

./: .gitignore  CMakeLists.txt
include/: lanczos.h  matrix.h  matrix_algo.h  matrix_solvers.h  system.h  vector.h
src/: lanczos.cpp  main.cpp  matrix_solvers.cpp  system.cpp
src/algorithms/: bisect.cpp  lanczos.cpp  minres.cpp  rqi.cpp  thomas.cpp
